src/snapshots/afrotd__parser__tests__interpretation_1.3.2_1.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 1
  - 3
  - 2
index: 1
text: "Beim vierten Down betritt der Kicker A1 das Spielfeld mit einem\nüberprüften Spielball und verlangt vom Referee, diesen Ball gegen den\nauszutauschen, der beim vorherigen Down benutzt wurde."
ruling: Ersetzen dieses Balles wird nicht erlaubt.
