src/snapshots/afrotd__parser__tests__interpretation_1.4.11_3.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 1
  - 4
  - 11
index: 3
text: "Während eines Timeouts versammelt sich Team A in einem\nHuddle in der Spielfeldmitte. Der Team A-Head Coach bringt eines der\n18 genehmigten Tablets und bespricht das Video mit seinen Spielern\nin der Spielfeldmitte."
ruling: "Keine legale Nutzung des Tablets. Der\nHead Coach wird wegen unsportlichen Verhaltens bestraft (Regel 1.4.11.b).\nDas ist ein Dead Ball Foul und die 15-Meterstrafe wird vom Succeeding\nSpot durchgeführt."
