src/snapshots/afrotd__parser__tests__interpretation_1.4.2_1.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 1
  - 4
  - 2
index: 1
text: "Ein Team A-Spieler, der zu Beginn des Spieles das Trikot mit der\nNummer 77 trug, kommt ins Spielfeld und trägt die Nummer 88."
ruling: "Der Spieler muss sich beim Referee melden. Der Referee veranlasst die Änderung im Spielberichtsbogen und benutzt sein Mikrofon,\num die Änderung mitzuteilen. Der betreffende Schiedsrichter informiert\nden gegnerischen Head Coach. Falls A88 die Meldung unterlässt, ist\ndas ein Foul für ein unsportliches Verhalten."
