src/snapshots/afrotd__parser__tests__interpretation_1.4.7_1.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 1
  - 4
  - 7
index: 1
text: "A33 trägt ein Kopftuch unter seinem Helm, wobei ein Teil des\nKopftuches unter der Rückseite des Helms herausragt."
ruling: "Illegal. Kopftücher dürfen unter dem Helm getragen werden, solange kein\nTeil des Kopftuches unter dem Helm hervorragt, wenn dieser korrekt\ngetragen wird. A33 muss das Feld für einen Down verlassen und darf\nerst wieder am Spiel teilnehmen, wenn das Kopftuch komplett unter\ndem Helm versteckt oder entfernt wurde. Team A kann ein Team Timeout nutzen, damit A33 auf dem Feld bleiben kann. Allerdings muss das\nKopftuch während des Timeouts unter den Helm gesteckt oder entfernt\nwerden."
