src/snapshots/afrotd__parser__tests__interpretation_1.4.7_3.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 1
  - 4
  - 7
index: 3
text: "Beim Passcheck erkennt der Referee, dass beide Teams identische Trikotfarben tragen, bzw. Trikots tragen, die nicht eindeutig unterschiedlich sind."
ruling: "Der Referee bespricht das Problem mit den\nVerantwortlichen der Teams. Er gibt ihnen eine Stunde Zeit, für andere Trikots zu sorgen. Nach Ablauf der Frist lässt sich der Referee die\nSpielberichte geben und trägt den Vorfall entsprechend ein. Das Spiel\nwird nicht angepfiffen und die spielleitende Stelle wird verständigt."
